--- a/index.html
+++ b/index.html
@@ -5,9 +5,41 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Phone Bazar | PH Assignment-6</title>
+        <!-- Tailwind CSS -->
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body>
-        <h1>Hello World</h1>
+    <body class="bg-slate-100 px-4 py-8">
+        <header>
+            <h1 class="text-5xl font-semibold text-center">Phone Bazar</h1>
+        </header>
+        <main class="container mx-auto">
+            <!-- Search Section -->
+            <section class="flex justify-center items-center my-8 py-8">
+                <div>
+                    <input
+                        type="text"
+                        id="search"
+                        placeholder="Search a phone"
+                        class="py-2 px-4 bg-white rounded-l-md"
+                    />
+                    <button
+                        class="py-2 px-4 bg-blue-600 text-white rounded-r-md"
+                    >
+                        Search
+                    </button>
+                </div>
+            </section>
+
+            <!-- Phone Display section -->
+
+            <section class="flex justify-center items-center">
+                <div
+                    id="phones"
+                    class="flex justify-between items-center"
+                ></div>
+            </section>
+        </main>
+        <!-- custom Javascript -->
+        <script src="app.js"></script>
     </body>
 </html>
