phones page completed

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     id="phones"
                     class="grid grid-cols-1 sm:grid-cols-3 justify-between items-center gap-4"
                 ></div>
+                <!-- Nodata Found -->
+                <div id="no-data"></div>
+                <div id="loading"></div>
             </section>
         </main>
         <!-- custom Javascript -->
