added phone details

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             >
                 <div id="loading"></div>
             </section>
+            <!-- Details Section -->
             <section
                 id="details-section"
                 class="flex justify-center items-center mt-12 sm:container sm:px-32"
